[Add] item page

--- a/frontend/views/applications.ejs
+++ b/frontend/views/applications.ejs
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/sidebar.css" />
-    <link rel="stylesheet" href="css/userForm.css" />
-    <script src="js/index.js"></script>
-    <link rel="shortcut icon" href="media/logo_transparent_big.png" type="image/png">
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/nav.css" />
+    <link rel="stylesheet" href="../css/sidebar.css" />
+    <link rel="stylesheet" href="../css/userForm.css" />
+    <script src="../js/index.js"></script>
+    <link rel="shortcut icon" href="../media/logo_transparent_big.png" type="image/png">
     <title>Play Store</title>
 </head>
 
@@ -18,7 +18,7 @@
         <ul>
             <% for (var i=0;i<applications.length;i++) {%>
                 <li>
-                    <%=applications[i].name%>
+                    <%=applications[i]%>
                 </li>
                 <%}%>
         </ul>
@@ -26,7 +26,7 @@
         <div id="userFormDiv">
             <a href="#" id="closeModal">&times;</a>
             <h1>Play Store</h1>
-            <img src="media/logo_transparent_big.png" alt="logo">
+            <img src="../media/logo_transparent_big.png" alt="logo">
             <form id="userForm" action="">
                 <label for="usernameInput">Username</label><br>
                 <input id="usernameInput" placeholder="Username" type="text"><br>
