--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -18,7 +18,7 @@
         <ul>
             <% for (var i=0;i<books.length;i++) {%>
                 <li>
-                    <%=books[i].name%>
+                    <%=books[i]%>
                 </li>
                 <%}%>
         </ul>
