--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
-    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="media/sidebarIcon.png" alt="sidebarIcon"></a>
+    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="../media/sidebarIcon.png" alt="sidebarIcon"></a>
     <h1 id="navTitle">Play Store</h1>
     <input id="navSearch" placeholder="Search" type="text">
     <button class="navButtons" id="signupNavButton">Sign Up</button>
