Added to frontend

--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -18,7 +18,7 @@
         <ul>
             <% for (var i=0;i<books.length;i++) {%>
                 <li>
-                    <%=books[i]%>
+                    <%=books[i].name%>
                 </li>
                 <%}%>
         </ul>
@@ -40,6 +40,7 @@
                 <button id="userFormButton"></button>
             </form>
         </div>
+
 
         <div id="content">
 
