--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -34,6 +34,46 @@
             </form>
         </div>
 
+        <div class="dropdown">
+            <button class="dropbtn">Choose Currency</button>
+            <div class="dropdown-content">
+                <a href="#">
+                    <img src="media/currency/united-states.png"
+                    width="15" height="15"> USD
+                </a>
+                <a href="#">
+                    <img src="media/currency/lebanon.png"
+                    width="15" height="15"> LBP
+                </a>
+            </div>
+        </div>
+
+        <div class="dropdown">
+            <button class="dropbtn">Filter By</button>
+            <div class="dropdown-content">
+                <a href="#">
+                    <img src="media/filter/genre.png"
+                    width="15" height="15"> Genre
+                </a>
+                <a href="#">
+                    <img src="media/filter/topselling.png"
+                    width="15" height="15"> Top Selling
+                </a>
+                <a href="#">
+                    <img src="media/filter/newreleases.png"
+                    width="15" height="15"> New Releases
+                </a>
+                <a href="#">
+                    <img src="media/filter/gooddeals.png"
+                    width="15" height="15"> Good Deals
+                </a>
+            </div>
+        </div>
+
+        <div class="dropdown">
+            <button class="dropbtn">Wishlist</button>
+        </div>
+
         <div id="content">
 
         </div>
