--- a/frontend/css/nav.css
+++ b/frontend/css/nav.css
@@ -1,3 +1,8 @@
+#logo {
+  width: 35px;
+  height: 35px;
+  margin: 20px;
+}
 nav {
   padding: 5px 30px;
   background-color: teal;
@@ -9,10 +14,13 @@ button.navButtons {
   height: 35px;
   margin: 20px;
   border: teal;
+  background-color: rgb(20, 66, 66);
+  color: white;
   border-radius: 10px;
 }
 
 #navTitle {
+  padding-top: 3px;
   margin-right: 15%;
 }
 
@@ -37,4 +45,53 @@ button.navButtons {
 #sidebarIcon:hover {
   width: 25px;
   height: 25px;
+}
+
+.dropbtn {
+  background-color: rgb(20, 66, 66);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn img {
+  height: 15px;
+  width: 15px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  padding-top: 4px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 
+      0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 12px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: rgb(122, 175, 175);
 }
