--- a/frontend/views/games.ejs
+++ b/frontend/views/games.ejs
@@ -18,7 +18,7 @@
         <ul>
             <% for (var i=0;i<games.length;i++) {%>
                 <li>
-                    <%=games[i]%>
+                    <%=games[i].name%>
                 </li>
                 <%}%>
         </ul>
