--- a/frontend/views/movies.ejs
+++ b/frontend/views/movies.ejs
@@ -18,7 +18,7 @@
         <ul>
             <% for (var i=0;i<movies.length;i++) {%>
                 <li>
-                    <%=movies[i]%>
+                    <%=movies[i].name%>
                 </li>
                 <%}%>
         </ul>
