--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -1,13 +1,15 @@
 <nav>
-    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="../media/sidebarIcon.png" alt="sidebarIcon"></a>
+    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="media/sidebarIcon.png" alt="sidebarIcon"></a>
+    <img id="logo" src="media/logo_transparent_big.png" alt="logo"></img>
     <h1 id="navTitle">Play Store</h1>
-    <input id="navSearch" placeholder="Search" type="text">
+    <input id="navSearch" placeholder="Search..." type="text">
     <button class="navButtons" id="signupNavButton">Sign Up</button>
     <button class="navButtons" id="loginNavButton">Login</button>
 </nav>
 
 <div id="sidebar" class="sidenav">
     <a href="#" class="closebtn" id="sidebarCloseButton">&times;</a>
+    <a href="/">Home</a>
     <a href="/applications">Applications</a>
     <a href="/games">Games</a>
     <a href="/movies">Movies</a>
