--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -4,46 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/sidebar.css" />
-    <link rel="stylesheet" href="css/userForm.css" />
     <script src="js/index.js"></script>
-    <link rel="shortcut icon" href="media/logo_transparent_big.png" type="image/png">
     <title>Play Store</title>
+    <%- include('cssImports')%>
 </head>
 
 <body>
     <%- include('navbar')%>
 
-        <div id="userFormDiv">
-            <a href="#" id="closeModal">&times;</a>
-            <h1>Play Store</h1>
-            <img src="media/logo_transparent_big.png" alt="logo">
-            <form id="userForm" action="">
-                <label for="usernameInput">Username</label><br>
-                <input id="usernameInput" placeholder="Username" type="text"><br>
-                <label for="passwordInput">Password</label><br>
-                <input id="passwordInput" placeholder="Password" type="password"><br>
-                <div id="loginExtrasDiv">
-                    <input type="checkbox" checked id="remembermeCheck">
-                    <label for="remembermeCheck">Remember Me</label>
-                    <a href="#">Forgot Password?</a>
-                </div>
-                <button id="userFormButton"></button>
-            </form>
-        </div>
-
         <div class="dropdown">
             <button class="dropbtn">Choose Currency</button>
             <div class="dropdown-content">
                 <a href="#">
-                    <img src="media/currency/united-states.png"
-                    width="15" height="15"> USD
+                    <img src="media/currency/united-states.png" width="15" height="15"> USD
                 </a>
                 <a href="#">
-                    <img src="media/currency/lebanon.png"
-                    width="15" height="15"> LBP
+                    <img src="media/currency/lebanon.png" width="15" height="15"> LBP
                 </a>
             </div>
         </div>
@@ -52,26 +28,24 @@
             <button class="dropbtn">Filter By</button>
             <div class="dropdown-content">
                 <a href="#">
-                    <img src="media/filter/genre.png"
-                    width="15" height="15"> Genre
+                    <img src="media/filter/genre.png" width="15" height="15"> Genre
                 </a>
                 <a href="#">
-                    <img src="media/filter/topselling.png"
-                    width="15" height="15"> Top Selling
+                    <img src="media/filter/topselling.png" width="15" height="15"> Top Selling
                 </a>
                 <a href="#">
-                    <img src="media/filter/newreleases.png"
-                    width="15" height="15"> New Releases
+                    <img src="media/filter/newreleases.png" width="15" height="15"> New Releases
                 </a>
                 <a href="#">
-                    <img src="media/filter/gooddeals.png"
-                    width="15" height="15"> Good Deals
+                    <img src="media/filter/gooddeals.png" width="15" height="15"> Good Deals
                 </a>
             </div>
         </div>
 
         <div class="dropdown">
-            <button class="dropbtn">Wishlist</button>
+            <a href="/user/Bleast/wishlist">
+                <button class="dropbtn">Wishlist</button>
+            </a>
         </div>
 
         <div id="content">
