--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -16,3 +16,20 @@
     <a href="/books">Books</a>
     <br>
 </div>
+<div id="userFormDiv">
+    <a href="#" id="closeModal">&times;</a>
+    <h1>Play Store</h1>
+    <img src="media/logo_transparent_big.png" alt="logo">
+    <form id="userForm" action="">
+        <label for="usernameInput">Username</label><br>
+        <input id="usernameInput" placeholder="Username" type="text"><br>
+        <label for="passwordInput">Password</label><br>
+        <input id="passwordInput" placeholder="Password" type="password"><br>
+        <div id="loginExtrasDiv">
+            <input type="checkbox" checked id="remembermeCheck">
+            <label for="remembermeCheck">Remember Me</label>
+            <a href="#">Forgot Password?</a>
+        </div>
+        <button id="userFormButton"></button>
+    </form>
+</div>
