[Add] Newest Releases [Add] Last 24 Visited Items [Add] Footer [Add] Fetch User's Country for footer [Fix] Imports frontend

--- a/frontend/css/nav.css
+++ b/frontend/css/nav.css
@@ -23,6 +23,11 @@ button.navButtons {
   padding-top: 3px;
   margin-right: 10%;
 }
+#navTitleLink {
+  text-decoration: none;
+  color: black;
+  width: 250px;
+}
 
 #navSearch {
   width: 500px;
@@ -72,8 +77,7 @@ button.navButtons {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 
-      0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -85,7 +89,7 @@ button.navButtons {
 }
 
 .dropdown-content a:hover {
-  background-color: #f1f1f1
+  background-color: #f1f1f1;
 }
 
 .dropdown:hover .dropdown-content {
