--- a/frontend/views/item.ejs
+++ b/frontend/views/item.ejs
@@ -3,10 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <script src="js/index.js"></script>
     <title>Play Store</title>
-    <%- include('cssImports')%>
+    <%- include('headImports')%>
 </head>
 
 <body>
@@ -34,6 +32,7 @@
             <div id="content">
 
             </div>
+            <%- include('footer')%>
 </body>
 
 </html>
