--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -1,7 +1,9 @@
 <nav>
-    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="media/sidebarIcon.png" alt="sidebarIcon"></a>
-    <img id="logo" src="media/logo_transparent_big.png" alt="logo"></img>
-    <h1 id="navTitle">Play Store</h1>
+    <a href="#" id="sidebarIconAnchor"><img id="sidebarIcon" src="/media/sidebarIcon.png" alt="sidebarIcon"></a>
+    <img id="logo" src="/media/logo_transparent_big.png" alt="logo"></img>
+    <a id="navTitleLink" href="/">
+        <h1 id="navTitle">Play Store</h1>
+    </a>
     <input id="navSearch" placeholder="Search..." type="text">
     <button class="navButtons" id="signupNavButton">Sign Up</button>
     <button class="navButtons" id="loginNavButton">Login</button>
@@ -19,7 +21,7 @@
 <div id="userFormDiv">
     <a href="#" id="closeModal">&times;</a>
     <h1>Play Store</h1>
-    <img src="media/logo_transparent_big.png" alt="logo">
+    <img src="/media/logo_transparent_big.png" alt="logo">
     <form id="userForm" action="">
         <label for="usernameInput">Username</label><br>
         <input id="usernameInput" placeholder="Username" type="text"><br>
