--- a/frontend/views/wishlist.ejs
+++ b/frontend/views/wishlist.ejs
@@ -3,10 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <script src="js/index.js"></script>
     <title>Play Store</title>
-    <%- include('cssImports')%>
+    <%- include('headImports')%>
 </head>
 
 <body>
@@ -20,6 +18,7 @@
                     <%}%>
             </ul>
         </div>
+        <%- include('footer')%>
 </body>
 
 </html>
