--- a/frontend/views/applications.ejs
+++ b/frontend/views/applications.ejs
@@ -9,18 +9,39 @@
 
 <body>
     <%- include('navbar')%>
-        <ul>
-            <% for (var i=0;i<applications.length;i++) {%>
-                <li>
-                    <%=applications[i]%>
-                </li>
-                <%}%>
-        </ul>
 
         <div id="content">
+            <div class="itemsRow">
+                <% for (var i=0;i<applications.length;i++) {%>
+                    <div class="itemBox">
+                        <% if (wishlist.includes(applications[i]._id)) { %>
+                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                            <% } else { %>
+                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                <% } %>
+                                    <img class="itemImage" src="<%=applications[i].image%>" alt="Image">
+                                    <p class="itemTitle">
+                                        <%=applications[i].title%>
+                                    </p>
+                                    <p class="itemType">
+                                        <%=applications[i].constructor.modelName%>
+                                    </p>
+                                    <p class="itemId">
+                                        <%=applications[i]._id%>
+                                    </p>
+                                    <p class="itemPrice">
+                                        <% if (applications[i].price===0) { %>
+                                            Free
+                                            <% } else { %>
+                                                <%=applications[i].price%>$
+                                                    <% } %>
+                                    </p>
+                    </div>
+                    <%}%>
+            </div>
 
+            <%- include('footer')%>
         </div>
-        <%- include('footer')%>
 </body>
 
 </html>
