--- a/frontend/views/headImports.ejs
+++ b/frontend/views/headImports.ejs
@@ -1,8 +1,12 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 <link rel="stylesheet" href="/../css/index.css" />
+<link rel="stylesheet" href="/../css/itemBox.css" />
 <link rel="stylesheet" href="/../css/nav.css" />
 <link rel="stylesheet" href="/../css/sidebar.css" />
 <link rel="stylesheet" href="/../css/footer.css" />
 <link rel="stylesheet" href="/../css/userForm.css" />
 <link rel="shortcut icon" href="/../media/logo_transparent_big.png" type="image/png">
-<script type="module" src="/../js/index.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script type="text/javascript" src="/../js/itemBox.js"></script>
+<script type="text/javascript" src="/../js/index.js"></script>
+<!-- <script type="text/javascript" src="/../js/footer.js"></script>  Turn on to find country -->
