--- a/frontend/css/userForm.css
+++ b/frontend/css/userForm.css
@@ -16,8 +16,8 @@
   height: 100px;
   width: 500px;
 }
-#usernameInput,
-#passwordInput {
+#username,
+#password {
   margin-top: 10px;
   margin-bottom: 10px;
   width: 330px;
