--- a/frontend/views/games.ejs
+++ b/frontend/views/games.ejs
@@ -20,9 +20,11 @@
                                 <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
                                 <% } %>
                                     <img class="itemImage" src="<%=games[i].image%>" alt="Image">
-                                    <p class="itemTitle">
-                                        <%=games[i].title%>
-                                    </p>
+                                    <a href="/item?itemType=<%=games[i].constructor.modelName%>&itemId=<%=games[i]._id%>">
+                                        <p class="itemTitle">
+                                            <%=games[i].title%>
+                                        </p>
+                                    </a>
                                     <p class="itemType">
                                         <%=games[i].constructor.modelName%>
                                     </p>
