--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -5,6 +5,7 @@
         <h1 id="navTitle">Play Store</h1>
     </a>
     <input id="navSearch" placeholder="Search..." type="text">
+    <!-- <a href="/logout"> <button class="navButtons">Logout</button></a> -->
     <button class="navButtons" id="signupNavButton">Sign Up</button>
     <button class="navButtons" id="loginNavButton">Login</button>
 </nav>
