--- a/frontend/css/nav.css
+++ b/frontend/css/nav.css
@@ -3,6 +3,13 @@
   height: 35px;
   margin: 20px;
 }
+
+#pp {
+  width: 35px;
+  height: 35px;
+  margin: 20px;
+}
+
 nav {
   padding: 5px 30px;
   background-color: teal;
