--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -14,7 +14,6 @@
             <div class="itemsRow">
                 <% for (var i=0;i<books.length;i++) {%>
                     <div class="itemBox largeItemBox">
-
                         <img class="itemImage" src="<%=books[i].image%>" alt="Image">
                         <a href="/item?itemType=<%=books[i].constructor.modelName%>&itemId=<%=books[i]._id%>">
                             <p class="itemTitle">
@@ -27,18 +26,20 @@
                         <p class="itemId">
                             <%=books[i]._id%>
                         </p>
-                        <% if (wishlist.includes(books[i]._id)) { %>
-                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
-                            <% } else { %>
-                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
-                                <% } %>
-                                    <p class="itemPrice">
-                                        <% if (books[i].price===0) { %>
-                                            Free
-                                            <% } else { %>
-                                                <%=books[i].price%>$
-                                                    <% } %>
-                                    </p>
+                        <% if (username) { %>
+                            <% if (wishlist.includes(books[i]._id)) { %>
+                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                <% } else { %>
+                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                    <% } %>
+                                        <% } %>
+                                            <p class="itemPrice">
+                                                <% if (books[i].price===0) { %>
+                                                    Free
+                                                    <% } else { %>
+                                                        <%=books[i].price%>$
+                                                            <% } %>
+                                            </p>
                     </div>
                     <%}%>
             </div>
