--- a/frontend/views/games.ejs
+++ b/frontend/views/games.ejs
@@ -14,30 +14,33 @@
             <div class="itemsRow">
                 <% for (var i=0;i<games.length;i++) {%>
                     <div class="itemBox">
-                        <% if (wishlist.includes(games[i]._id)) { %>
-                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
-                            <% } else { %>
-                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
-                                <% } %>
-                                    <img class="itemImage" src="<%=games[i].image%>" alt="Image">
-                                    <a href="/item?itemType=<%=games[i].constructor.modelName%>&itemId=<%=games[i]._id%>">
-                                        <p class="itemTitle">
-                                            <%=games[i].title%>
-                                        </p>
-                                    </a>
-                                    <p class="itemType">
-                                        <%=games[i].constructor.modelName%>
-                                    </p>
-                                    <p class="itemId">
-                                        <%=games[i]._id%>
-                                    </p>
-                                    <p class="itemPrice">
-                                        <% if (games[i].price===0) { %>
-                                            Free
-                                            <% } else { %>
-                                                <%=games[i].price%>$
-                                                    <% } %>
-                                    </p>
+                        <% if (username) { %>
+                            <% if (wishlist.includes(games[i]._id)) { %>
+                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                <% } else { %>
+                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                    <% } %>
+                                        <% } %>
+                                            <img class="itemImage" src="<%=games[i].image%>" alt="Image">
+                                            <a
+                                                href="/item?itemType=<%=games[i].constructor.modelName%>&itemId=<%=games[i]._id%>">
+                                                <p class="itemTitle">
+                                                    <%=games[i].title%>
+                                                </p>
+                                            </a>
+                                            <p class="itemType">
+                                                <%=games[i].constructor.modelName%>
+                                            </p>
+                                            <p class="itemId">
+                                                <%=games[i]._id%>
+                                            </p>
+                                            <p class="itemPrice">
+                                                <% if (games[i].price===0) { %>
+                                                    Free
+                                                    <% } else { %>
+                                                        <%=games[i].price%>$
+                                                            <% } %>
+                                            </p>
                     </div>
                     <%}%>
             </div>
