--- a/frontend/views/navbar.ejs
+++ b/frontend/views/navbar.ejs
@@ -5,10 +5,10 @@
         <h1 id="navTitle">Play Store</h1>
     </a>
     <input id="navSearch" placeholder="Search..." type="text">
-    <img id="pp" src="/media/logo_transparent_big.png" alt="profile pic" style="display: none;"></img>
-    <button class="navButtons" id="logoutNavButton" style="display: none;">Logout</button>
-    <button class="navButtons" id="signupNavButton" style="display: none;">Sign Up</button>
-    <button class="navButtons" id="loginNavButton" style="display: none;">Login</button>
+    <img id="pp" src="" alt="profile pic">
+    <button class="navButtons" id="logoutNavButton"><a href="/logout">Logout</a></button>
+    <button class="navButtons" id="signupNavButton">Sign Up</button>
+    <button class="navButtons" id="loginNavButton">Login</button>
 </nav>
 
 <div id="sidebar" class="sidenav">
