--- a/frontend/views/games.ejs
+++ b/frontend/views/games.ejs
@@ -9,6 +9,7 @@
 
 <body>
     <%- include('navbar')%>
+    <h1 class="page_title">GAMES</h1>
 
         <div id="content">
             <div class="itemsRow">
