--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -11,39 +11,41 @@
     <%- include('navbar')%>
     <h1 class="page_title">BOOKS</h1>
 
-        <div id="content">
-            <div class="itemsRow">
-                <% for (var i=0;i<books.length;i++) {%>
-                    <div class="itemBox largeItemBox">
-                        <img class="itemImage" src="<%=books[i].image%>" alt="Image">
-                        <a href="/item?itemType=<%=books[i].constructor.modelName%>&itemId=<%=books[i]._id%>">
-                            <p class="itemTitle">
-                                <%=books[i].title%>
-                            </p>
-                        </a>
-                        <p class="itemType">
-                            <%=books[i].constructor.modelName%>
+    <div id="content">
+        <div class="itemsRowHome">
+            <% for (var i=0;i<10;i++) {%>
+                <div class="itemBox largeItemBoxHome">
+                    <img class="itemImageHome" src="<%=books[i].image%>" alt="Image">
+                    <a href="/item?itemType=<%=books[i].constructor.modelName%>&itemId=<%=books[i]._id%>">
+                        <p class="itemTitleHome">
+                            <%=books[i].title%>
                         </p>
-                        <p class="itemId">
-                            <%=books[i]._id%>
-                        </p>
-                        <% if (username) { %>
-                            <% if (wishlist.includes(books[i]._id)) { %>
-                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
-                                <% } else { %>
-                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                    </a>
+                    <p class="itemType">
+                        <%=books[i].constructor.modelName%>
+                    </p>
+                    <p class="itemId">
+                        <%=books[i]._id%>
+                    </p>
+                    <% if (username) { %>
+                        <% if (wishlist.includes(books[i]._id)) { %>
+                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                            <% } else { %>
+                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                <% } %>
                                     <% } %>
-                                        <% } %>
-                                            <p class="itemPrice">
-                                                <% if (books[i].price===0) { %>
-                                                    Free
-                                                    <% } else { %>
-                                                        <%=books[i].price%>$
-                                                            <% } %>
-                                            </p>
-                    </div>
-                    <%}%>
-            </div>
+                                        <p class="itemPrice">
+                                            <% if (books[i].price===0) { %>
+                                                Free
+                                                <% } else { %>
+                                                    <%=books[i].price%>$
+                                                        <% } %>
+                                        </p>
+                </div>
+                <%}%>
+        </div>
+
+    <button class="dropbtn seemore">See More...</button>
 
             <%- include('footer')%>
         </div>
