--- a/frontend/css/itemBox.css
+++ b/frontend/css/itemBox.css
@@ -1,12 +1,15 @@
-.itemsRow {
+.itemsRowHome {
   padding: 15px;
   display: flex;
-  flex-wrap: wrap;
+  overflow: scroll;
   gap: 15px;
+}
+.seemore {
+  float: right;
 }
 .itemBox {
   width: 180px;
-  height: 235px;
+  height: 245px;
   background-color: white;
   padding: 10px;
   border-radius: 5%;
@@ -16,14 +19,16 @@
   text-align: right;
 }
 
-.itemBox .itemImage {
-  margin-left: 25px;
-}
+.itemBox .itemImageHome {
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 5%;
 
-.itemBox .itemTitle {
+}
+.itemBox .itemTitleHome {
   text-align: center;
+  margin: 3px;
 }
-
 .itemBox .itemType {
   font-size: small;
   text-align: center;
@@ -39,25 +44,28 @@
   font-size: 24px;
 }
 
-.largeItemBox {
+.largeItemBoxHome {
   padding: 0;
-  width: 150px;
-  height: 330px;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.largeItemBox .itemImage {
-  margin-left: 0px;
-  height: 213px;
-  width: 160px;
+  width: 190px;
+  height: 360px;
+  white-space: wrap;
 }
 
 .itemBox .itemPrice {
   margin-right: 10px;
 }
 
-.largeItemBox .fa {
+.largeItemBoxHome .fa {
   margin-left: 10px;
   float: left;
+}
+
+.largeItemBoxHome .itemImageHome {
+  border-radius: 5%;
+  height: 235px;
+  width: 160px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+
 }
