--- a/frontend/views/movies.ejs
+++ b/frontend/views/movies.ejs
@@ -11,40 +11,41 @@
     <%- include('navbar')%>
     <h1 class="page_title">MOVIES</h1>
 
-        <div id="content">
-            <div class="itemsRow">
-                <% for (var i=0;i<movies.length;i++) {%>
-                    <div class="itemBox largeItemBox">
-                        <img class="itemImage" src="<%=movies[i].image%>" alt="Image">
-                        <a href="/item?itemType=<%=movies[i].constructor.modelName%>&itemId=<%=movies[i]._id%>">
-                            <p class="itemTitle">
-                                <%=movies[i].title%>
-                            </p>
-                        </a>
-                        <p class="itemType">
-                            <%=movies[i].constructor.modelName%>
+    <div id="content">
+        <div class="itemsRowHome">
+            <% for (var i=0;i<10;i++) {%>
+                <div class="itemBox largeItemBoxHome">
+                    <img class="itemImageHome" src="<%=movies[i].image%>" alt="Image">
+                    <a href="/item?itemType=<%=movies[i].constructor.modelName%>&itemId=<%=movies[i]._id%>">
+                        <p class="itemTitleHome">
+                            <%=movies[i].title%>
                         </p>
-                        <p class="itemId">
-                            <%=movies[i]._id%>
-                        </p>
-                        <% if (username) { %>
-                            <% if (wishlist.includes(movies[i]._id)) { %>
-                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
-                                <% } else { %>
-                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                    </a>
+                    <p class="itemType">
+                        <%=movies[i].constructor.modelName%>
+                    </p>
+                    <p class="itemId">
+                        <%=movies[i]._id%>
+                    </p>
+                    <% if (username) { %>
+                        <% if (wishlist.includes(movies[i]._id)) { %>
+                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                            <% } else { %>
+                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                <% } %>
                                     <% } %>
-                                        <% } %>
-                                    <p class="itemPrice">
-                                        <% if (movies[i].price===0) { %>
-                                            Free
-                                            <% } else { %>
-                                                <%=movies[i].price%>$
-                                                    <% } %>
-                                    </p>
-                    </div>
-                    <%}%>
-            </div>
+                                <p class="itemPrice">
+                                    <% if (movies[i].price===0) { %>
+                                        Free
+                                        <% } else { %>
+                                            <%=movies[i].price%>$
+                                                <% } %>
+                                </p>
+                </div>
+                <%}%>
+        </div>
 
+        <button class="dropbtn seemore">See More...</button>
             <%- include('footer')%>
         </div>
 </body>
